--- a/wwwroot/app/components/node.component.css
+++ b/wwwroot/app/components/node.component.css
@@ -1,43 +1,44 @@
 ﻿.node { margin: 3px 0; padding: 3px 0px; background: #222222; height: auto; }
+    .node li { list-style: none; }
 .nodeHeader { height: 120px; margin: 0; padding: 8px; background: #222222; border-left: 4px solid #000000; }
-    .nodeHeader h3 { font-size: 24px; font-weight: lighter; margin-top:0; margin-bottom: 5px; }
-    .nodeHeader h4 { font-size: 14px; font-weight: bold; margin-top:0; margin-bottom: 3px; }
-    .nodeHeader h5 { font-size: 12px; margin-top:0; margin-bottom: 2px;}
-    .nodeHeader span { font-size: 10px; font-style: italic; } 
+    .nodeHeader h3 { font-size: 24px; font-weight: lighter; margin-top: 0; margin-bottom: 5px; }
+    .nodeHeader h4 { font-size: 14px; font-weight: bold; margin-top: 0; margin-bottom: 3px; }
+    .nodeHeader h5 { font-size: 12px; margin-top: 0; margin-bottom: 2px; }
+    .nodeHeader span { font-size: 10px; font-style: italic; }
 .nodeTitle { float: left; padding-bottom: 5px; }
 .nodeStatus { float: right; text-align: right; }
 .nodeStats { clear: both; padding-top: 5px; text-align: center; }
 .nodeCapacityViolation { color: #e81123; }
 .nodeCapacityWarning { color: #FCD116; }
 
-.selectorButton { cursor: pointer; position:absolute; line-height: 1em; }
-.label-selected { cursor: pointer; float: left; position: absolute; top: 18px; left:16px; transform: rotate(90deg); transform-origin: left top 0; }
+.selectorButton { cursor: pointer; position: absolute; line-height: 1em; }
+.label-selected { cursor: pointer; float: left; position: absolute; top: 18px; left: 16px; transform: rotate(90deg); transform-origin: left top 0; }
 .label-unselected { cursor: pointer; }
 
-.application-list { list-style: none; margin: 0; padding: 0; }
-.application { font-size:10px; position:relative; list-style: none; margin: 2px 0; padding: 0 2px; border: 1px solid #000000; overflow:hidden }
+.application-list { margin: 0; padding: 0; }
+.application { margin: 2px 0; padding: 0 2px; border: 1px solid #000000; font-size: 10px; position: relative; overflow: hidden; }
 
-.service-list { list-style: none; margin: 0; padding: 0; }
-.service { font-size: 10px; position:relative; overflow:hidden; list-style: none; margin: 1px 0 0 15px; padding: 0; border: 1px solid #000000; }
+.service-list { margin: 0; padding: 0; }
+.service { margin: 1px 0 0 15px; padding: 0; border: 1px solid #000000; font-size: 10px; position: relative; overflow: hidden; }
 
-.replica-list { list-style: none; margin: 0; padding: 0; }
-.replica { list-style: none; margin: 0 0 0 15px; padding: 0; border: 1px solid #000000; }
+.replica-list { margin: 0; padding: 0; }
+.replica { margin: 0 0 0 15px; padding: 0; border: 1px solid #000000; }
 
 /* replica roles*/
-.primary { opacity:1; border-color:#DDDDDD; }
-.stateless { opacity: 1; border-color:#DDDDDD; }
-.activesecondary { opacity:0.7; border-color: #000000; }
-.idlesecondary { opacity:0.5; border-color: #000000; }
-.none { opacity:1; border-color: #000000; }
-.unknown { opacity:1; border-color: #000000; }
+.primary { opacity: 1; border-color: #DDDDDD; }
+.stateless { opacity: 1; border-color: #DDDDDD; }
+.activesecondary { opacity: 0.7; border-color: #000000; }
+.idlesecondary { opacity: 0.5; border-color: #000000; }
+.none { opacity: 1; border-color: #000000; }
+.unknown { opacity: 1; border-color: #000000; }
 
 /* replica statuses*/
-.replica-invalid { background-color:#000000 }
-.replica-inbuild { background-color:#D17D00 }
-.replica-standby { background-color:#77A5C6 }
-.replica-ready { background-color:#00ABEC }
-.replica-down { background-color: #E81123 }
-.replica-dropped { background-color: #333333 }
+.replica-invalid { background-color: #000000; }
+.replica-inbuild { background-color: #D17D00; }
+.replica-standby { background-color: #77A5C6; }
+.replica-ready { background-color: #00ABEC; }
+.replica-down { background-color: #E81123; }
+.replica-dropped { background-color: #333333; }
 
 /* common */
 .invalid { border-color: #000000; }
@@ -57,8 +58,8 @@
 .error { border-color: #E81123; }
 
 /* application and service statuses */
-.ready { border-color:#00ABEC; }
-.creating { border-color:#D17D00; }
+.ready { border-color: #00ABEC; }
+.creating { border-color: #D17D00; }
 .active { border-color: #00ABEC; }
 .upgrading { border-color: #00C69F; }
 .deleting { border-color: #AAAAAA; }
